--- a/environment.yml
+++ b/environment.yml
@@ -123,7 +123,6 @@ dependencies:
   - tornado=6.1=py39hb9d737c_3
   - traitlets=5.9.0=pyhd8ed1ab_0
   - typing_extensions=4.5.0=py39h06a4308_0
-  - urllib3=1.26.16=py39h06a4308_0
   - wcwidth=0.2.6=pyhd8ed1ab_0
   - wheel=0.38.4=py39h06a4308_0
   - xz=5.4.2=h5eee18b_0
@@ -185,7 +184,7 @@ dependencies:
       - cycler==0.11.0
       - cymem==2.0.7
       - dataclasses-json==0.5.9
-      - deeplake==3.6.10
+      - deeplake==3.6.12
       - deprecated==1.2.14
       - dill==0.3.6
       - dnspython==2.3.0
@@ -339,7 +338,7 @@ dependencies:
       - pillow==9.5.0
       - pinecone-client==2.2.2
       - pinecone-text==0.4.2
-      - pip==23.1.2
+      - pip==23.2.1
       - platformdirs==3.8.0
       - portalocker==2.7.0
       - pox==0.3.2
@@ -444,6 +443,7 @@ dependencies:
       - tzlocal==4.3.1
       - uc-micro-py==1.0.2
       - uritemplate==4.1.1
+      - urllib3==1.25.11
       - uvicorn==0.22.0
       - uvloop==0.17.0
       - validators==0.20.0
