--- a/environment.yml
+++ b/environment.yml
@@ -1,469 +1,31 @@
 name: llm
 channels:
-  - pytorch
-  - nvidia
-  - anaconda
-  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - asttokens=2.2.1=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - blas=1.0=mkl
-  - brotlipy=0.7.0=py39h27cfd23_1003
-  - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2023.01.10=h06a4308_0
-  - certifi=2022.12.7=py39h06a4308_0
-  - cffi=1.15.1=py39h5eee18b_3
-  - cryptography=39.0.1=py39h9ce1e76_1
-  - cuda-cudart=11.8.89=0
-  - cuda-cupti=11.8.87=0
-  - cuda-libraries=11.8.0=0
-  - cuda-nvrtc=11.8.89=0
-  - cuda-nvtx=11.8.86=0
-  - cuda-runtime=11.8.0=0
-  - cudatoolkit=11.8.0=h6a678d5_0
-  - debugpy=1.5.1=py39h295c915_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - executing=1.2.0=pyhd8ed1ab_0
-  - ffmpeg=4.3=hf484d3e_0
-  - freetype=2.12.1=h4a9f257_0
-  - giflib=5.2.1=h5eee18b_3
-  - gmp=6.2.1=h295c915_3
-  - gmpy2=2.1.2=py39heeb90bb_0
-  - gnutls=3.6.15=he1e5248_0
-  - idna=3.4=py39h06a4308_0
-  - intel-openmp=2023.1.0=hdb19cb5_46305
-  - ipykernel=6.15.0=pyh210e3f2_0
-  - ipython=8.14.0=pyh41d4057_0
-  - jedi=0.18.2=pyhd8ed1ab_0
-  - jinja2=3.1.2=py39h06a4308_0
-  - jpeg=9e=h5eee18b_1
-  - jupyter_client=7.0.6=pyhd8ed1ab_0
-  - jupyter_core=4.12.0=py39hf3d152e_0
-  - krb5=1.20.1=h143b758_1
-  - lame=3.100=h7b6447c_0
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - lerc=3.0=h295c915_0
-  - libcublas=11.11.3.6=0
-  - libcufft=10.9.0.58=0
-  - libcufile=1.6.1.9=0
-  - libcurand=10.3.2.106=0
-  - libcusolver=11.4.1.48=0
-  - libcusparse=11.7.5.86=0
-  - libdeflate=1.17=h5eee18b_0
-  - libedit=3.1.20221030=h5eee18b_0
-  - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libiconv=1.16=h7f8727e_2
-  - libidn2=2.3.4=h5eee18b_0
-  - libnpp=11.8.0.86=0
-  - libnvjpeg=11.9.0.86=0
-  - libpng=1.6.39=h5eee18b_0
-  - libpq=12.15=h251f7ec_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libtasn1=4.19.0=h5eee18b_0
-  - libtiff=4.5.0=h6a678d5_2
-  - libunistring=0.9.10=h27cfd23_0
-  - libwebp=1.2.4=h11a3e52_1
-  - libwebp-base=1.2.4=h5eee18b_1
-  - lz4-c=1.9.4=h6a678d5_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mkl=2023.1.0=h6d00ec8_46342
-  - mkl-service=2.4.0=py39h5eee18b_1
-  - mkl_fft=1.3.6=py39h417a72b_1
-  - mkl_random=1.2.2=py39h417a72b_1
-  - mpc=1.1.0=h10f8cd9_1
-  - mpfr=4.0.2=hb69a4c5_1
-  - mpmath=1.2.1=py39h06a4308_0
-  - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - nettle=3.7.3=hbbd107a_1
-  - networkx=2.8.4=py39h06a4308_1
-  - numpy-base=1.24.3=py39h060ed82_1
-  - openh264=2.1.1=h4ff587b_0
-  - openssl=3.0.8=h7f8727e_0
-  - packaging=23.1=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pexpect=4.8.0=pyh1a96a4e_2
-  - pickleshare=0.7.5=py_1003
-  - prompt-toolkit=3.0.38=pyha770c72_0
-  - prompt_toolkit=3.0.38=hd8ed1ab_0
-  - psycopg2=2.9.3=py39h37d81fd_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.15.1=pyhd8ed1ab_0
-  - pyopenssl=23.0.0=py39h06a4308_0
-  - pysocks=1.7.1=py39h06a4308_0
-  - python=3.9.16=h955ad1f_3
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - pytorch-cuda=11.8=h7e8668a_5
-  - pytorch-mutex=1.0=cuda
-  - pyzmq=19.0.2=py39hb69f2a1_2
-  - readline=8.2=h5eee18b_0
-  - setuptools=67.8.0=py39h06a4308_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.41.2=h5eee18b_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - sympy=1.11.1=py39h06a4308_0
-  - tbb=2021.8.0=hdb19cb5_0
-  - tk=8.6.12=h1ccaba5_0
-  - torchaudio=2.0.2=py39_cu118
-  - torchtriton=2.0.0=py39
-  - torchvision=0.15.2=py39_cu118
-  - tornado=6.1=py39hb9d737c_3
-  - traitlets=5.9.0=pyhd8ed1ab_0
-  - typing_extensions=4.5.0=py39h06a4308_0
-  - wcwidth=0.2.6=pyhd8ed1ab_0
-  - wheel=0.38.4=py39h06a4308_0
-  - xz=5.4.2=h5eee18b_0
-  - zeromq=4.3.4=h9c3ff4c_1
-  - zlib=1.2.13=h5eee18b_0
-  - zstd=1.5.5=hc292b87_0
-  - pip:
-      - absl-py==1.4.0
-      - accelerate==0.20.3
-      - aioboto3==11.2.0
-      - aiobotocore==2.5.0
-      - aiodns==3.0.0
-      - aiofiles==23.1.0
-      - aiohttp==3.8.4
-      - aiohttp-retry==2.8.3
-      - aioitertools==0.11.0
-      - aiosignal==1.3.1
-      - aiostream==0.4.5
-      - aleph-alpha-client==2.17.0
-      - altair==5.0.1
-      - anthropic==0.2.10
-      - anyio==3.7.0
-      - arxiv==1.4.7
-      - asgiref==3.7.2
-      - astunparse==1.6.3
-      - async-timeout==4.0.2
-      - atlassian-python-api==3.39.0
-      - attr==0.3.2
-      - attrs==23.1.0
-      - authlib==1.2.1
-      - awadb==0.3.5
-      - azure-ai-formrecognizer==3.2.1
-      - azure-ai-vision==0.11.1b1
-      - azure-cognitiveservices-speech==1.30.0
-      - azure-common==1.1.28
-      - azure-core==1.27.1
-      - azure-cosmos==4.4.0
-      - azure-identity==1.13.0
-      - backoff==2.2.1
-      - beautifulsoup4==4.12.2
-      - blinker==1.6.2
-      - blis==0.7.9
-      - boto3==1.26.76
-      - botocore==1.29.76
-      - brotli==1.0.9
-      - build==0.10.0
-      - cachetools==5.3.1
-      - catalogue==2.0.8
-      - cchardet==2.1.7
-      - chardet==5.1.0
-      - charset-normalizer==3.1.0
-      - clarifai==9.1.0
-      - clarifai-grpc==9.5.0
-      - click==8.1.3
-      - clickhouse-connect==0.5.25
-      - cohere==3.10.0
-      - confection==0.1.0
-      - contourpy==1.1.0
-      - cycler==0.11.0
-      - cymem==2.0.7
-      - dataclasses-json==0.5.9
-      - deeplake==3.6.12
-      - deprecated==1.2.14
-      - dill==0.3.6
-      - dnspython==2.3.0
-      - docarray==0.32.1
-      - docker==6.1.3
-      - duckduckgo-search==3.8.3
-      - ecdsa==0.18.0
-      - einops==0.6.1
-      - elastic-transport==8.4.0
-      - elasticsearch==8.8.0
-      - esprima==4.0.1
-      - exceptiongroup==1.1.1
-      - faiss-cpu==1.7.4
-      - fastapi==0.95.2
-      - feedparser==6.0.10
-      - ffmpy==0.3.0
-      - filelock==3.12.1
-      - flatbuffers==23.5.26
-      - fluent-logger==0.10.0
-      - fonttools==4.40.0
-      - frozenlist==1.3.3
-      - fsspec==2023.6.0
-      - future==0.18.3
-      - gast==0.4.0
-      - geojson==2.5.0
-      - gitdb==4.0.10
-      - gitpython==3.1.31
-      - google-api-core==2.11.1
-      - google-api-python-client==2.70.0
-      - google-auth==2.19.1
-      - google-auth-httplib2==0.1.0
-      - google-auth-oauthlib==1.0.0
-      - google-pasta==0.2.0
-      - google-search-results==2.4.2
-      - googleapis-common-protos==1.59.1
-      - gptcache==0.1.34
-      - gradio==3.34.0
-      - gradio-client==0.2.6
-      - greenlet==2.0.2
-      - grpcio==1.47.5
-      - grpcio-health-checking==1.47.5
-      - grpcio-reflection==1.47.5
-      - grpcio-tools==1.47.5
-      - h11==0.14.0
-      - h2==4.1.0
-      - h5py==3.8.0
-      - hnswlib==0.7.0
-      - hpack==4.0.0
-      - html2text==2020.1.16
-      - httpcore==0.17.2
-      - httplib2==0.22.0
-      - httptools==0.5.0
-      - httpx==0.24.1
-      - huggingface-hub==0.15.1
-      - humbug==0.3.1
-      - hyperframe==6.0.1
-      - importlib-metadata==6.0.1
-      - importlib-resources==5.12.0
-      - inflection==0.5.1
-      - isodate==0.6.1
-      - jaraco-context==4.3.0
-      - jax==0.4.12
-      - jcloud==0.2.12
-      - jina==3.14.1
-      - jina-hubble-sdk==0.38.0
-      - jmespath==1.0.1
-      - joblib==1.3.1
-      - jq==1.4.1
-      - jsonlines==3.1.0
-      - jsonschema==4.17.3
-      - keras==2.12.0
-      - kiwisolver==1.4.4
-      - lancedb==0.1.9
-      - langchain==0.0.222
-      - langchainplus-sdk==0.0.20
-      - langcodes==3.3.0
-      - langkit==0.0.3
-      - lark==1.1.5
-      - libclang==16.0.0
-      - linkify-it-py==2.0.2
-      - loguru==0.7.0
-      - lxml==4.9.2
-      - lz4==4.3.2
-      - manifest-ml==0.0.1
-      - markdown==3.4.3
-      - markdown-it-py==2.2.0
-      - markupsafe==2.1.3
-      - marshmallow==3.19.0
-      - marshmallow-enum==1.5.1
-      - matplotlib==3.7.1
-      - mdit-py-plugins==0.3.3
-      - mdurl==0.1.2
-      - ml-dtypes==0.2.0
-      - mmh3==3.1.0
-      - momento==1.6.1
-      - momento-wire-types==0.64.1
-      - more-itertools==9.1.0
-      - msal==1.22.0
-      - msal-extensions==1.0.0
-      - msgpack==1.0.5
-      - msrest==0.7.1
-      - multidict==6.0.4
-      - multiprocess==0.70.14
-      - murmurhash==1.0.9
-      - mypy-extensions==1.0.0
-      - nebula3-python==3.4.0
-      - neo4j==5.10.0
-      - nlpcloud==1.0.43
-      - nltk==3.8.1
-      - nomic==1.1.14
-      - numcodecs==0.11.0
-      - numexpr==2.8.4
-      - numpy==1.23.5
-      - nvidia-cublas-cu11==11.10.3.66
-      - nvidia-cublas-cu12==12.1.3.1
-      - nvidia-cuda-nvrtc-cu11==11.7.99
-      - nvidia-cuda-runtime-cu11==11.7.99
-      - nvidia-cuda-runtime-cu12==12.1.105
-      - nvidia-cudnn-cu11==8.5.0.96
-      - nvidia-cudnn-cu12==8.9.2.26
-      - o365==2.0.27
-      - oauthlib==3.2.2
-      - octoai-sdk==0.1.2
-      - openai==0.27.8
-      - openapi-schema-pydantic==1.2.4
-      - openlm==0.0.5
-      - opensearch-py==2.2.0
-      - opentelemetry-api==1.18.0
-      - opentelemetry-exporter-otlp==1.18.0
-      - opentelemetry-exporter-otlp-proto-common==1.18.0
-      - opentelemetry-exporter-otlp-proto-grpc==1.18.0
-      - opentelemetry-exporter-otlp-proto-http==1.18.0
-      - opentelemetry-exporter-prometheus==1.12.0rc1
-      - opentelemetry-instrumentation==0.39b0
-      - opentelemetry-instrumentation-aiohttp-client==0.39b0
-      - opentelemetry-instrumentation-asgi==0.39b0
-      - opentelemetry-instrumentation-fastapi==0.39b0
-      - opentelemetry-instrumentation-grpc==0.39b0
-      - opentelemetry-proto==1.18.0
-      - opentelemetry-sdk==1.18.0
-      - opentelemetry-semantic-conventions==0.39b0
-      - opentelemetry-util-http==0.39b0
-      - opt-einsum==3.3.0
-      - orjson==3.9.1
-      - pandas==2.0.2
-      - pathos==0.3.0
-      - pathspec==0.11.1
-      - pathy==0.10.2
-      - pdfminer-six==20221105
-      - pgvector==0.1.8
-      - pillow==9.5.0
-      - pinecone-client==2.2.2
-      - pinecone-text==0.4.2
-      - pip==23.2.1
-      - platformdirs==3.8.0
-      - portalocker==2.7.0
-      - pox==0.3.2
-      - ppft==1.7.6.6
-      - preshed==3.0.8
-      - prometheus-client==0.17.0
-      - protobuf==3.20.3
-      - psutil==5.9.5
-      - psycopg2-binary==2.9.6
-      - py==1.11.0
-      - pyarrow==12.0.1
-      - pyasn1==0.5.0
-      - pyasn1-modules==0.3.0
-      - pycares==4.3.0
-      - pydantic==1.10.9
-      - pydeck==0.8.1b0
-      - pydub==0.25.1
-      - pyjwt==2.7.0
-      - pylance==0.5.3
-      - pymongo==4.4.0
-      - pympler==1.0.1
-      - pyowm==3.3.0
-      - pyparsing==3.0.9
-      - pypdf==3.12.0
-      - pyphen==0.14.0
-      - pyproject-hooks==1.0.0
-      - pyrsistent==0.19.3
-      - pytesseract==0.3.10
-      - python-dotenv==1.0.0
-      - python-jose==3.3.0
-      - python-multipart==0.0.6
-      - pytz==2023.3
-      - pytz-deprecation-shim==0.1.0.post0
-      - pyvespa==0.33.0
-      - pyyaml==6.0
-      - qdrant-client==1.3.1
-      - ratelimiter==1.2.0.post0
-      - redis==4.6.0
-      - regex==2023.6.3
-      - requests==2.28.2
-      - requests-oauthlib==1.3.1
-      - requests-toolbelt==1.0.0
-      - retry==0.9.2
-      - rich==13.4.2
-      - rsa==4.9
-      - s3transfer==0.6.1
-      - safetensors==0.3.1
-      - scikit-learn==1.3.0
-      - scipy==1.10.1
-      - semantic-version==2.10.0
-      - semver==3.0.1
-      - sentence-transformers==2.2.2
-      - sentencepiece==0.1.99
-      - sgmllib3k==1.0.0
-      - singlestoredb==0.7.1
-      - smart-open==6.3.0
-      - smmap==5.0.0
-      - sniffio==1.3.0
-      - socksio==1.0.0
-      - soundfile==0.12.1
-      - soupsieve==2.4.1
-      - spacy==3.5.4
-      - spacy-legacy==3.0.12
-      - spacy-loggers==1.0.4
-      - sqlalchemy==2.0.17
-      - sqlitedict==2.1.0
-      - sqlparams==5.1.0
-      - srsly==2.4.6
-      - starlette==0.27.0
-      - steamship==2.17.13
-      - streamlit==1.24.0
-      - stringcase==1.2.0
-      - tabulate==0.9.0
-      - tenacity==8.2.2
-      - tensorboard==2.12.3
-      - tensorboard-data-server==0.7.0
-      - tensorflow==2.12.0
-      - tensorflow-estimator==2.12.0
-      - tensorflow-io-gcs-filesystem==0.32.0
-      - tensorrt==8.6.1
-      - tensorrt-bindings==8.6.1
-      - tensorrt-libs==8.6.1
-      - termcolor==2.3.0
-      - textstat==0.7.3
-      - thinc==8.1.10
-      - threadpoolctl==3.1.0
-      - tigrisdb==1.0.0b6
-      - tiktoken==0.3.3
-      - tokenizers==0.13.3
-      - toml==0.10.2
-      - tomli==2.0.1
-      - toolz==0.12.0
-      - torch==1.13.1
-      - tqdm==4.65.0
-      - transformers==4.30.1
-      - typer==0.9.0
-      - types-pyyaml==6.0.12.10
-      - types-requests==2.31.0.1
-      - types-urllib3==1.26.25.13
-      - typing-inspect==0.9.0
-      - tzdata==2023.3
-      - tzlocal==4.3.1
-      - uc-micro-py==1.0.2
-      - uritemplate==4.1.1
-      - urllib3==1.25.11
-      - uvicorn==0.22.0
-      - uvloop==0.17.0
-      - validators==0.20.0
-      - wasabi==1.1.2
-      - watchdog==3.0.0
-      - watchfiles==0.19.0
-      - weaviate-client==3.21.0
-      - websocket-client==1.6.1
-      - websockets==11.0.3
-      - werkzeug==2.3.6
-      - wget==3.2
-      - whylabs-client==0.5.2
-      - whylogs==1.2.0
-      - whylogs-sketching==3.4.1.dev3
-      - wikipedia==1.4.0
-      - wolframalpha==5.0.0
-      - wonderwords==2.2.0
-      - wrapt==1.14.1
-      - xmltodict==0.13.0
-      - yarl==1.9.2
-      - zipp==3.15.0
-      - zstandard==0.21.0
+  - defaults/linux-64::_libgcc_mutex==0.1=main
+  - ca-certificates
+  - defaults/linux-64::ld_impl_linux-64==2.38=h1181459_1
+  - defaults/linux-64::libstdcxx-ng==11.2.0=h1234567_1
+  - defaults/noarch::tzdata==2023c=h04d1e81_0
+  - defaults/linux-64::libgomp==11.2.0=h1234567_1
+  - defaults/linux-64::_openmp_mutex==5.1=1_gnu
+  - defaults/linux-64::libgcc-ng==11.2.0=h1234567_1
+  - defaults/linux-64::cudatoolkit==11.8.0=h6a678d5_0
+  - defaults/linux-64::libffi==3.4.4=h6a678d5_0
+  - defaults/linux-64::ncurses==6.4=h6a678d5_0
+  - openssl
+  - defaults/linux-64::xz==5.4.2=h5eee18b_0
+  - defaults/linux-64::zlib==1.2.13=h5eee18b_0
+  - defaults/linux-64::readline==8.2=h5eee18b_0
+  - defaults/linux-64::tk==8.6.12=h1ccaba5_0
+  - defaults/linux-64::sqlite==3.41.2=h5eee18b_0
+  - defaults/linux-64::python==3.9.16=h955ad1f_3
+  - defaults/linux-64::setuptools==67.8.0=py39h06a4308_0
+  - defaults/linux-64::wheel==0.38.4=py39h06a4308_0
+  - defaults/linux-64::pip==23.0.1=py39h06a4308_0
+  - torchaudio
+  - torchvision
+  - pytorch-cuda=11.8
+  - ipykernel
+  - psycopg2
 prefix: /home/kaies/anaconda3/envs/llm
